clang/test/BSC/Negative/Generic/StructAndFunction/redefinition_a_owned_struct/redefinition_a_owned_struct_2.cbs
// RUN: %clang_cc1 %s -verify 

#include<stdlib.h>          // expected-error{{'stdlib.h' file not found}}

typedef void (*FNPT)(size_t);

extern FNPT fnpt1;

int main() {
    size_t a1 = 1;
    return 0;
}